# vibe-loadbar

./: Cargo.toml  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.py  styleOBJ.py  styles.py
.github/workflows/: release.yml
docs/: README.md  loading.md  minload.md  rustbar.md  styles_basic.md  styles_fun.md  styles_smooth.md  themes.md
src/: lib.rs
vibe_load/: __init__.py  clr.py  efficient.py  err.py  ext.py  main.py  rust_wrapper.py  styleOBJ.py  styles.py  themes.py
vibe_load/libvibe_loadbar_rs.dylib.dSYM/Contents/: Info.plist
vibe_load/libvibe_loadbar_rs.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libvibe_loadbar_rs.dylib.yml
